// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering disabled 1`] = `
<div
  className="form-group"
>
  <label>
    Select Label
  </label>
  <select
    aria-label="Select Label"
    className="form-control"
    disabled={true}
  >
    <option
      value="1"
    >
      Option 1
    </option>
    <option
      value="2"
    >
      Option 2
    </option>
    <option
      value="3"
    >
      Option 3
    </option>
  </select>
</div>
`;

exports[`Rendering inline 1`] = `
<div
  className="form-group-item"
>
  <label>
    Select Label
  </label>
  <select
    aria-label="Select Label"
    className="form-control"
  >
    <option
      value="1"
    >
      Option 1
    </option>
    <option
      value="2"
    >
      Option 2
    </option>
    <option
      value="3"
    >
      Option 3
    </option>
  </select>
</div>
`;

exports[`Rendering with an option selected 1`] = `
<div
  className="form-group"
>
  <label>
    Select Label
  </label>
  <select
    aria-label="Select Label"
    className="form-control"
    name="mySelectName"
  >
    <option
      value="1"
    >
      Option 1
    </option>
    <option
      selected={true}
      value="2"
    >
      Option 2
    </option>
    <option
      value="3"
    >
      Option 3
    </option>
  </select>
</div>
`;

exports[`Rendering with container properties 1`] = `
<div
  className="customContainerClassName form-group"
>
  <label>
    Select Label
  </label>
  <select
    aria-label="Select Label"
    className="form-control"
  >
    <option
      value="1"
    >
      Option 1
    </option>
    <option
      value="2"
    >
      Option 2
    </option>
    <option
      value="3"
    >
      Option 3
    </option>
  </select>
</div>
`;

exports[`Rendering with id 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="mySelectId"
  >
    Select Label
  </label>
  <select
    aria-label="Select Label"
    className="form-control"
    id="mySelectId"
  >
    <option
      value="1"
    >
      Option 1
    </option>
    <option
      value="2"
    >
      Option 2
    </option>
    <option
      value="3"
    >
      Option 3
    </option>
  </select>
</div>
`;

exports[`Rendering with multiple options allowed 1`] = `
<div
  className="form-group"
>
  <label>
    Select Label
  </label>
  <select
    aria-label="Select Label"
    className="form-control"
    multiple={true}
  >
    <option
      value="1"
    >
      Option 1
    </option>
    <option
      value="2"
    >
      Option 2
    </option>
    <option
      value="3"
    >
      Option 3
    </option>
  </select>
</div>
`;

exports[`Rendering with name 1`] = `
<div
  className="form-group"
>
  <label>
    Select Label
  </label>
  <select
    aria-label="Select Label"
    className="form-control"
    name="mySelectName"
  >
    <option
      value="1"
    >
      Option 1
    </option>
    <option
      value="2"
    >
      Option 2
    </option>
    <option
      value="3"
    >
      Option 3
    </option>
  </select>
</div>
`;

exports[`Rendering with required attributes 1`] = `
<div
  className="form-group"
>
  <label>
    Select Label
  </label>
  <select
    aria-label="Select Label"
    className="form-control"
  >
    <option
      value="1"
    >
      Option 1
    </option>
    <option
      value="2"
    >
      Option 2
    </option>
    <option
      value="3"
    >
      Option 3
    </option>
  </select>
</div>
`;
